fix config fix data in post

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,14 +1,14 @@
-isSMTP = "false"
+isSMTP = false
 Host = ""
-SMTPAuth = "false"
+SMTPAuth = false
 Username = ""
 Password = ""
 SMTPSecure = ""
 Port = ""
 
-fromEmail = "info@blitzwolf.shop"
-fromName = "BlitzWolf Shop"
-subject = "Használati útmutató"
-BCCEmail = ""
+fromEmail = "hello@blitzwolf.shop"
+fromName = "BlitzWolf.Shop Magyarország"
+subject = "Használati útmutató [ORDER_ID]. számú rendeléshez "
+BCCEmail = "hello@blitzwolf.shop"
 
 fileNamePattern = "[PRODUCT_NAME] használati útmutató.pdf"
